# BinDrill

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile_insecure  LICENSE  NOTICE.txt  OrientDBWrapper.py  README.md  build_and_run.sh  config.toml  connectors.py  main.py  milvus_testing.py  models.py  pyproject.toml  vsftpd_all_graph.sqlite
.github/workflows/: codeql-analysis.yml
analysis/models/: compare_models.py  disco_models.py  sqlalchemy_models.py
assets/: custom.css
docs/: conf.py  index.rst
