[tool.poetry]
name = "func_drill"
version = "0.1.0"
description = "Binary one to many comparisions with embeddings"
authors = ["mcutshaw <michael.cutshaw@inl.gov>"]


[tool.poetry.dependencies]
python = ">=3.10,<4"
protobuf = "< 3.21.0"
dash = ">=2.0.0"
SQLAlchemy = ">=1.4.31"
numpy = ">=1.22.1"
torch = "*"
dash-bootstrap-components = ">=1.0.2"
tqdm = ">=4.64.0"
matplotlib = ">=3.5.2"
# sklearn = "*"
gevent = ">=21.12.0"
pymilvus = ">=2.0.2"
Sphinx = ">=5.0.2"
sphinx-rtd-theme = ">=1.0.0"
myst-parser = ">=0.18.0"
bandit = ">=1.7.4"
flake8 = ">=4.0.1"
google-api-python-client = ">=2.55.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
